# agentgif-python

./: README.md  pyproject.toml
src/agentgif/: __init__.py  auth.py  cli.py  client.py  config.py
tests/: test_cli.py
