[project]
name = "agentgif"
version = "0.2.0"
description = "CLI for AgentGIF — upload, manage, and share terminal GIFs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "AgentGIF"}]
keywords = ["gif", "terminal", "cli", "agentgif", "asciinema", "cast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Documentation",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
agentgif = "agentgif.cli:main"

[project.urls]
Homepage = "https://agentgif.com"
Documentation = "https://agentgif.com/docs/cli/"
Repository = "https://github.com/dobestan/agentgif-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentgif"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
